# FreeBird

./: CMakeLists.txt  README.md
cmake/: FreeBirdLauncher.sh.in
data/DRC/: Dassault_Rafale_C.mtl  destroy.mtl
data/bullet/: bullet.mtl
data/cockpit/: cockpit.mtl
data/fx/: explosion.osg  smoke.osg
data/generation/matlab/: normalMap.m  palmier.m  palmiers.txt
data/missile/: missile.mtl
data/models/bird/: eagle.mtl
data/models/house/: house.mtl
data/models/tree/palmier/: palm_tree.mtl
data/shaders/: baseFragment.glsl  baseVertex.glsl  skyBoxFragments.glsl  skyBoxVertex.glsl  terrainFragment.glsl  terrainVertex.glsl  tessControl.glsl  tessEval.glsl  waterFragment.glsl  waterVertex.glsl
data/terrain/base/: maisons.txt  terrain.mtl  water.mtl
program/: freebird.cpp
program/osg/: freebird.cpp
program/vrjuggler/: freebird.cpp
src/common/: defines.h  singleton.h
src/engine/common/: defines.h  helper.cpp  helper.h  random.cpp  random.h  singleton.h
src/engine/entities/: airplane.cpp  airplane.h  bullet.cpp  bullet.h  house.cpp  house.h  missile.cpp  missile.h  mitrailleuse.cpp  mitrailleuse.h  projectile.cpp  projectile.h
src/engine/fx/: explode.cpp  explode.h  explosion.cpp  explosion.h  fxbase.cpp  fxbase.h  splash.cpp  splash.h
src/engine/graphics/: cameraman.cpp  cameraman.h  defines.h  helper.cpp  helper.h  root.cpp  root.h  scenenode.cpp  scenenode.h  sceneobject.cpp  sceneobject.h  shadermanager.cpp  shadermanager.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h
src/engine/physics/: body.h  engine.cpp  engine.h  force.h
src/engine/resources/: resourcemanager.cpp  resourcemanager.h
src/engine/terrain/: const.h  helper.cpp  helper.h
src/input/: defines.h
src/io/osg/input/: defines.h  inputeventhandler.cpp  inputeventhandler.h  mousehandler.h
src/io/osg/renderer/: renderer.cpp  renderer.h
src/io/vrjuggler/input/: defines.h  nav.h
src/io/vrjuggler/renderer/: helper.cpp  helper.h  osgapp.h  renderer.cpp  renderer.h
src/rendering/: defines.h  renderer.cpp  renderer.h  root.cpp  root.h  sceneobject.h
src/resources/: resourcemanager.cpp  resourcemanager.h
